--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=ecomproject
 
 
-spring.datasource.url=jdbc:mysql://localhost:3308/ecomproject
+spring.datasource.url=jdbc:mysql://localhost:3306/ecomprojectnew
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
